--- a/scss/partials/_media.scss
+++ b/scss/partials/_media.scss
@@ -47,7 +47,7 @@
       .intro {
         h1,
         h2 {
-          font-size: 4em;
+          font-size: 3.9em;
 
           span {
             &:before {
@@ -69,6 +69,7 @@
         h3 {
           font-size: 3rem;
           margin-bottom: .5rem;
+          line-height: 1;
 
           span {
             display: block;
@@ -82,7 +83,8 @@
 
       h3 {
         font-size: 3rem;
-        margin-bottom: .5rem
+        margin-bottom: .5rem;
+        width: 100%;
       }
 
       .item {
